--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@ excerpt: >
   A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios.<br />
   <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.24.0">Latest release v4.24.0</a></small>
 feature_row:
-  - image_path: /assets/images/maze.jpg
+  - image_path: /assets/maze.jpg
     alt: "customizable"
     title: "Search problems"
-    excerpt: "Find a sequence of actions that leads from the initial state to the goal state"
+    excerpt: "Find a sequence of steps that guides from the starting point to the desired destination."
     url: "/PyAI/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
-  - image_path: /assets/images/mm-responsive-feature.png
+  - image_path: /assets/tictactoe.png
     alt: "fully responsive"
-    title: "Responsive layouts"
-    excerpt: "Built with HTML5 + CSS3. All layouts are fully responsive with helpers to augment your content."
-    url: "/docs/layouts/"
+    title: "Adversarial Search with Tic-Tac-Toe"
+    excerpt: "Adversarial search algorithms, frequently encountered in games like tic tac toe, confront opponents striving to achieve opposing goals"
+    url: "/PyAI/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
   - image_path: /assets/images/mm-free-feature.png
