--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ excerpt: >
   <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.24.0">Latest release v4.24.0</a></small>
 feature_row:
   - image_path: /assets/maze.jpg
-    alt: "customizable"
+    alt: "maze"
     title: "Search problems"
     excerpt: "Find a sequence of steps that guides from the starting point to the desired destination."
     url: "/PyAI/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
-  - image_path: /assets/tictactoe.png
-    alt: "fully responsive"
+  - image_path: /assets/tictactoe.jpg
+    alt: "tictactoe"
     title: "Adversarial Search with Tic-Tac-Toe"
     excerpt: "Adversarial search algorithms, frequently encountered in games like tic tac toe, confront opponents striving to achieve opposing goals"
     url: "/PyAI/"
