--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ feature_row:
     url: "/PyAI/"
     btn_class: "btn--primary"
     btn_label: "Learn more"
-  - image_path: /assets/images/mm-free-feature.png
-    alt: "100% free"
-    title: "100% free"
-    excerpt: "Free to use however you want under the MIT License. Clone it, fork it, customize it... whatever!"
+  - image_path: /assets/traffic_signs.jpg
+    alt: "traffic signs"
+    title: "Traffic sign recognition"
+    excerpt: "Building a neural network using TensorFlow to classify road signs based on an image of those signs"
     url: "/docs/license/"
     btn_class: "btn--primary"
     btn_label: "Learn more"      
