--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@ header:
 excerpt: >
   A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios.
 feature_row:
-  - image_path: /assets/maze.jpg
-    alt: "maze"
-    title: "Search problems"
-    excerpt: "Find a sequence of steps that guides from the starting point to the desired destination."
-    url: "/PyAI/"
+  - image_path: /assets/pyAI_icon.png
+    alt: "pyAI"
+    title: ""
+    excerpt: ""
+    url: "/page/"
     btn_class: "btn--primary"
-    btn_label: "Learn more"
-  - image_path: /assets/tictactoe.jpg
-    alt: "tictactoe"
-    title: "Adversarial Search with Tic-Tac-Toe"
-    excerpt: "Adversarial search algorithms, frequently encountered in games like tic tac toe, confront opponents striving to achieve opposing goals"
-    url: "/PyAI/"
+    btn_label: "My PAGE"
+  - image_path: /assets/research_icon.gif
+    alt: "research"
+    title: ""
+    excerpt: ""
+    url: "/research/"
     btn_class: "btn--primary"
-    btn_label: "Learn more"
-  - image_path: /assets/traffic_signs.jpg
-    alt: "traffic signs"
-    title: "Traffic sign recognition"
-    excerpt: "Building a neural network using TensorFlow to classify road signs based on an image of those signs"
-    url: "/docs/license/"
+    btn_label: "Research"
+  - image_path: /assets/about_me_icon.png
+    alt: "about me"
+    title: ""
+    excerpt: ""
+    url: "/about/"
     btn_class: "btn--primary"
-    btn_label: "Learn more"      
+    btn_label: "About me"      
 ---
 
 {% include feature_row %}
