--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ feature_row:
     url: "/page/"
     btn_class: "btn--primary"
     btn_label: "My PAGE"
+    type: "center"
   - image_path: /assets/research_icon.gif
     alt: "research"
     title: ""
@@ -22,13 +23,15 @@ feature_row:
     url: "/research/"
     btn_class: "btn--primary"
     btn_label: "Research"
+    type: "center"
   - image_path: /assets/about_me_icon.png
     alt: "about me"
     title: ""
     excerpt: ""
     url: "/about/"
     btn_class: "btn--primary"
-    btn_label: "About me"      
+    btn_label: "About me"  
+    type: "center"
 ---
 
 {% include feature_row %}
