--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ feature_row:
     url: "/page/"
     btn_class: "btn--primary"
     btn_label: "My PAGE"
-    type: "center"
+    type="center"
   - image_path: /assets/research_icon.gif
     alt: "research"
     title: ""
@@ -23,7 +23,7 @@ feature_row:
     url: "/research/"
     btn_class: "btn--primary"
     btn_label: "Research"
-    type: "center"
+    type="center"
   - image_path: /assets/about_me_icon.png
     alt: "about me"
     title: ""
@@ -31,7 +31,7 @@ feature_row:
     url: "/about/"
     btn_class: "btn--primary"
     btn_label: "About me"  
-    type: "center"
+    type="center"
 ---
 
 {% include feature_row %}
