--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: splash
 permalink: /
+title: "Welcome to my website!"
 hidden: true
 header:
   overlay_color: "#5e616c"
   overlay_image: /assets/images/mm-home-page-feature.jpg
-excerpt: >
-  A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios.
+excerpt: 
 feature_row:
   - image_path: /assets/pyAI_icon.png
     alt: "pyAI"
