--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: splash
 permalink: /
 title: "Welcome to my website!"
-hidden: true
+hidden: false
 header:
   overlay_color: "#5e616c"
-  overlay_image: /assets/images/mm-home-page-feature.jpg
+  overlay_image: /assets/header_image_turbulence.png
 excerpt: 
 feature_row:
   - image_path: /assets/pyAI_icon.png
