--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: "Welcome to my website!"
 hidden: false
 header:
   overlay_color: "#5e616c"
-  image_path: /assets/header_image_turbulence.png
+  image: /assets/header_image_turbulence.png
 excerpt: 
 feature_row:
   - image_path: /assets/pyAI_icon.png
