--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@ permalink: /
 title: "Welcome to my website!"
 hidden: false
 header:
-  image: /assets/header_image_turbulence.png
-excerpt: 
+  overlay_image: /assets/header_image_turbulence.png
+excerpt:  >  
+    
+     
+ <br />
 feature_row:
   - image_path: /assets/pyAI_icon.png
     alt: "pyAI"
