--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 ---
 layout: splash
 permalink: /
-title: "Welcome to my website!"
+title: "Welcome to my website!
+  
+  "
 hidden: false
 header:
   overlay_image: /assets/header_image_turbulence.png
-excerpt:  >  
-    
-     
- <br />
+excerpt: 
 feature_row:
   - image_path: /assets/pyAI_icon.png
     alt: "pyAI"
