--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: splash
 permalink: /
-title: "Welcome to my website!
-  
-  "
+title: "Welcome to my website!                                                                                                                                  "
 hidden: false
 header:
   overlay_image: /assets/header_image_turbulence.png
