--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ permalink: /
 title: "Welcome to my website!                                                                                                                                  "
 hidden: false
 header:
-  overlay_image: /assets/header_image_turbulence.png
+  image: /assets/header_image_turbulence.png
 excerpt: 
 feature_row:
   - image_path: /assets/pyAI_icon.png
